--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.1",
-    "@mui/material": "^7.1.1",
-    "axios": "^1.9.0",
-    "react-router-dom": "^7.6.2"
+    "@mui/material": "^7.1.2",
+    "axios": "^1.10.0",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
+    "pdfmake": "^0.2.20",
+    "react-router-dom": "^7.6.2",
+    "recharts": "^3.0.1"
   }
 }
