--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,32 +1,26 @@
 {
-  "name": "frontend",
+  "name": "combustible-frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000",
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.1.1",
-    "@mui/material": "^7.1.1",
-    "axios": "^1.9.0",
-    "chart.js": "^4.4.9",
-    "react": "^19.1.0",
-    "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2",
-    "react-scripts": "^5.0.1",
-    "react-toastify": "^9.1.2",
-    "react-use": "^17.4.0",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "reselect": "^4.1.8",
-    "web-vitals": "^3.5.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "@mui/material": "^5.15.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.0",
+    "axios": "^1.6.0",
+    "chart.js": "^4.4.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-router-dom": "^6.20.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "clean": "rm -rf node_modules/.cache && rm -rf build && rm -f .eslintcache"
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +39,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:8000"
 }
